force-app/main/default/objects/Supplier_Certification__c/Supplier_Certification__c.object-meta.xml
<CustomObject>
    <label>サプライヤー認証</label>
    <pluralLabel>サプライヤー認証</pluralLabel>
    <nameField>
        <label>認証番号</label>
        <type>AutoNumber</type>
        <displayFormat>CERT-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>