force-app/main/default/objects/Supplier_Certification__c/fields/Certificate_URL__c.field-meta.xml
<CustomField>
    <fullName>Certificate_URL__c</fullName>
    <label>認証書URL</label>
    <type>Url</type>
</CustomField>