force-app/main/default/objects/Supplier_Certification__c/fields/Certification_Number__c.field-meta.xml
<CustomField>
    <fullName>Certification_Number__c</fullName>
    <label>認証番号</label>
    <type>Text</type>
    <length>100</length>
</CustomField>