force-app/main/default/objects/Supplier_Certification__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <label>有効期限</label>
    <type>Date</type>
    <required>true</required>
</CustomField>