force-app/main/default/objects/Supplier_Certification__c/fields/Issuing_Body__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Body__c</fullName>
    <label>認証機関</label>
    <type>Text</type>
    <length>255</length>
</CustomField>