force-app/main/default/objects/Supplier_Certification__c/fields/Last_Surveillance_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Surveillance_Date__c</fullName>
    <label>最終サーベイランス日</label>
    <type>Date</type>
</CustomField>