force-app/main/default/objects/Supplier_Certification__c/fields/Next_Surveillance_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Surveillance_Date__c</fullName>
    <label>次回サーベイランス予定日</label>
    <type>Date</type>
</CustomField>