force-app/main/default/objects/Supplier_Certification__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>認証範囲</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>