force-app/main/default/objects/Supplier_Certification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>有効</fullName><default>false</default><label>有効</label></value>
            <value><fullName>期限切れ</fullName><default>false</default><label>期限切れ</label></value>
            <value><fullName>更新中</fullName><default>false</default><label>更新中</label></value>
            <value><fullName>失効</fullName><default>false</default><label>失効</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>