force-app/main/default/objects/Supplier_Certification__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>サプライヤー</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Supplier_Certifications</relationshipName>
    <relationshipLabel>サプライヤー認証</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>